test/semantics/programs/invalid/func-args-mismatch-params.guav
# Shouldn't pass since function call arguments don't match function declaration parameters
# Let arrayParam be some integer arrayParamay of at least length 2 and x and y be integers

f(arrayParam, x, y) {
    x /= y
    ret x / arrayParam[1] + y
}

print(f("not an array", true, {}))
